<resources>
    <string name="app_name">Constancia Laboral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Principal</string>
    <string name="menu_plantillas">Plantillas</string>
    <string name="menu_constancias">Mis Constancias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_edit">Editar plantilla</string>
    <string name="txt_editar">Editar plantilla</string>
    <string name="txt_ok">Aceptar</string>
    <string name="txt_share">Compartir</string>
    <string name="txt_imprimir">Imprimir</string>
    <string name="txt_delete">Eliminar</string>
    <string name="compartrir">Compartir esta app ❤</string>
    <string name="valorar">Valorar esta app 🌟</string>
    <string name="txt_siguiente">Siguiente</string>
    <string name="txt_ciudad">Lugar o Ciudad</string>
    <string name="tx_fecha">Fecha hoy</string>
    <string name="txt_fecha_inicio">Fecha inicio</string>
    <string name="txt_fecha_salida">Fecha salida</string>
    <string name="txt_te_gusta_esta_app">¿Te gusta esta aplicación?</string>
    <string name="txt_valorarnos">Hola, valorar la aplicación me ayudaría para seguir mejorando</string>
    <string name="txt_valorar_estrellas">Sí, valorar con 5 estrellas :)</string>
    <string name="txt_mandar_retro">No, mandar retroalimentación.</string>
    <string name="txt_nombre_firma">Nombre del emisor</string>
    <string name="txt_nombre_trabajador">Nombre del trabajador</string>
    <string name="txt_mujer">Mujer</string>
    <string name="txt_hombre">Hombre</string>
    <string name="txt_puesto">Puesto desempeñado</string>
    <string name="lugar_vacio">La ciudad no puede estar vacio</string>
    <string name="fecha_inicio_vacio">La fecha de inicio no puede estar vacio</string>
    <string name="fecha_salida_vacio">La fecha de salida no puede estar vacio</string>
    <string name="puesto_vacio">El puesto no puede estar vacio</string>
    <string name="nombre_recomendado_vacio">El nombre no puede estar vacio</string>
    <string name="faltan_datos">Faltan datos por completar, por favor llena todas las cajas de texto.</string>
    <string name="txt_vista_previa">Vista previa</string>
    <string name="txt_guardar">Guardar</string>
    <string name="txt_guardar_constancia">Guardar constancia</string>
    <string name="txt_nombre_de_constancia">Nombre de la constancia</string>
    <string name="txt_carpeta">Carpeta</string>
    <string name="txt_Aceptar">Aceptar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="error_nombre">Falta el nombre</string>
    <string name="no_files">Aún no has creado una constancia.</string>
    <string name="dni_vacio">El DNI no puede estar vacio</string>
    <string name="txt_sueldo">Sueldo</string>
    <string name="sueldo_vacio">El sueldo es requerido</string>
    <string name="txt_numero_emisor">Numero telefónico del emisor</string>
    <string name="txt_para_camg">Para: camg.feedback@gmail.com</string>
    <string name="line_feedback">Me encantaría saber como puedo mejorar tu experiencia!</string>
    <string name="txt_tu_nombre">Tu nombre</string>
    <string name="txt_tus_deseos">Tus deseos</string>
    <string name="txt_enviar">Enviar</string>
    <string name="camg_mail">camg.feedback@gmail.com</string>
    <string name="txt_feedback">Retroalimentación</string>
    <string name="constancia_laboral">Constancia Laboral</string>
    <string name="constancia_laborall">constancia laboral</string>
    <string name="constancia">constancia</string>
    <string name="constancia_de_trabajo">constancia de trabajo</string>
    <string name="carta_constancia_de_trabajo">carta de constancia de trabajo</string>
    <string name="txt_libre">Libre</string>
    <string name="title_carta_libre">CARTA LIBRE</string>
    <string name="txt_Cuerpo">Cuerpo</string>
    <string name="txt_crear_carta">Crear carta</string>
    <string name="title_mi_carta">MI CARTA</string>
    <string name="txt_descargar">Descargar</string>
    <string name="txt_nombre_de_firma">Nombre Firma</string>
    <string name="txt_cuerpo">Cuerpo</string>
    <string name="txt_tamano_letra">Tamaño de letra</string>

</resources>